--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,9 +11,9 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 set(CMAKE_VERBOSE_MAKEFILE on)
 
 set(ANTLR4_WITH_STATIC_CRT OFF)
-set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
-message("${CMAKE_MSVC_RUNTIME_LIBRARY}")
+set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>DLL")
 
+message("${CMAKE_MSVC_RUNTIME_LIBRARY}")
 message("test")
 
 include_directories(src .)
@@ -33,9 +33,9 @@ add_executable(fhir_path_test fhir_path/src/fhir_path_test.cc)
 #link_directories(${CMAKE_SOURCE_DIR}/fhir_path/src/third_party/antlr)
 
 # Find ANTLR and link it
-find_library(ANTLR_LIB NAMES antlr4_runtime_release PATHS ${CMAKE_SOURCE_DIR}/libs)
-find_library(ARROW_LIB NAMES arrow_release PATHS ${CMAKE_SOURCE_DIR}/libs)
-find_library(PARQUET_LIB NAMES parquet_release PATHS ${CMAKE_SOURCE_DIR}/libs)
+find_library(ANTLR_LIB NAMES antlr4_runtime$<$<CONFIG:Release>_release> PATHS ${CMAKE_SOURCE_DIR}/libs)
+find_library(ARROW_LIB NAMES arrow$<$<CONFIG:Release>_release> PATHS ${CMAKE_SOURCE_DIR}/libs)
+find_library(PARQUET_LIB NAMES parquet$<$<CONFIG:Release>_release> PATHS ${CMAKE_SOURCE_DIR}/libs)
 target_link_libraries(fhir_path_test deserialization_dll ${ARROW_LIB} ${PARQUET_LIB} ${ANTLR_LIB})
 
 
