--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,13 +29,28 @@ add_executable(main src/main.cc)
 add_library(deserialization_dll SHARED dll/deserialization_dll.cc)
 add_executable(fhir_path_test fhir_path/src/fhir_path_test.cc)
 
+#add_executable(test src/test.cc)
+#target_link_libraries(test deserialization_dll)
+
 # Link libs
 #link_directories(${CMAKE_SOURCE_DIR}/fhir_path/src/third_party/antlr)
 
 # Find ANTLR and link it
-find_library(ANTLR_LIB NAMES antlr4_runtime$<$<CONFIG:Release>_release> PATHS ${CMAKE_SOURCE_DIR}/libs)
-find_library(ARROW_LIB NAMES arrow$<$<CONFIG:Release>_release> PATHS ${CMAKE_SOURCE_DIR}/libs)
-find_library(PARQUET_LIB NAMES parquet$<$<CONFIG:Release>_release> PATHS ${CMAKE_SOURCE_DIR}/libs)
+find_library(ANTLR_LIB NAMES antlr4_runtime PATHS ${CMAKE_SOURCE_DIR}/libs)
+find_library(ANTLR_LIB_RELEASE NAMES antlr4_runtime_release PATHS ${CMAKE_SOURCE_DIR}/libs)
+
+find_library(ARROW_LIB NAMES arrow PATHS ${CMAKE_SOURCE_DIR}/libs)
+find_library(ARROW_LIB_RELEASE NAMES arrow_release PATHS ${CMAKE_SOURCE_DIR}/libs)
+
+find_library(PARQUET_LIB NAMES parquet PATHS ${CMAKE_SOURCE_DIR}/libs)
+find_library(PARQUET_LIB_RELEASE NAMES parquet_release PATHS ${CMAKE_SOURCE_DIR}/libs)
+
+# This isn't really correct, since we are using a multi-configured version of cmake...
+if(DEBUG)
 target_link_libraries(fhir_path_test deserialization_dll ${ARROW_LIB} ${PARQUET_LIB} ${ANTLR_LIB})
+else()
+target_link_libraries(fhir_path_test deserialization_dll ${ARROW_LIB_RELEASE} ${PARQUET_LIB_RELEASE} ${ANTLR_LIB_RELEASE})
+endif()
+
 
 
